手机端 对比模块适配

--- a/sections/compare/compare.html
+++ b/sections/compare/compare.html
@@ -102,7 +102,7 @@
 }
 
 .compare-showcase--mobile .compare-showcase__carousel-wrapper {
-  padding: var(--spacing-xl) 0;
+  padding: var(--spacing-lg) 0;
   max-width: 480px;
   margin: 0 auto 40px;
   width: 100%;
@@ -114,7 +114,7 @@
   justify-content: center;
   gap: 0;
   min-height: auto;
-  padding: var(--spacing-xl) var(--spacing-md);
+  padding: var(--spacing-lg) var(--spacing-md);
 }
 
 .compare-showcase--mobile .compare-showcase__center {
@@ -453,7 +453,7 @@
   }
 
   .compare-showcase__carousel-wrapper {
-    padding: var(--spacing-xl) 0;
+    padding: var(--spacing-lg) 0;
     overflow: visible;
     width: 100%;
     display: flex;
@@ -463,12 +463,12 @@
 
   .compare-showcase__carousel {
     gap: 0;
-    min-height: 500px;
+    min-height: 440px;
     display: flex !important;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: var(--spacing-xl) var(--spacing-md);
+    padding: var(--spacing-lg) var(--spacing-md);
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
@@ -538,12 +538,12 @@
   }
 
   .compare-showcase__carousel-wrapper {
-    padding: var(--spacing-lg) 0;
+    padding: var(--spacing-md) 0;
   }
 
   .compare-showcase__carousel {
-    min-height: 450px;
-    padding: var(--spacing-lg) var(--spacing-sm);
+    min-height: 400px;
+    padding: var(--spacing-md) var(--spacing-sm);
   }
 
   .compare-showcase__card--main {
