--- a/sections/eclipses-engine/eclipses-engine.html
+++ b/sections/eclipses-engine/eclipses-engine.html
@@ -102,7 +102,7 @@
 }
 
 .tools-showcase--mobile .tools-showcase__carousel-wrapper {
-  padding: var(--spacing-xl) 0;
+  padding: var(--spacing-lg) 0;
   max-width: 480px;
   margin: 0 auto 40px;
   width: 100%;
@@ -114,7 +114,7 @@
   justify-content: center;
   gap: 0;
   min-height: auto;
-  padding: var(--spacing-xl) var(--spacing-md);
+  padding: var(--spacing-lg) var(--spacing-md);
 }
 
 .tools-showcase--mobile .tools-showcase__center {
@@ -437,7 +437,7 @@
 
   /* 轮播容器 - 完美居中 + 留出缩放空间 */
   .tools-showcase__carousel-wrapper {
-    padding: var(--spacing-xl) 0; /* 上下留出缩放空间 */
+    padding: var(--spacing-md) 0; /* 上下留出缩放空间 */
     overflow: visible; /* 允许卡片缩放时溢出 */
     width: 100%;
     display: flex;
@@ -447,12 +447,12 @@
 
   .tools-showcase__carousel {
     gap: 0;
-    min-height: 500px; /* 增加最小高度,留出缩放空间 */
+    min-height: 440px; /* 增加最小高度,留出缩放空间 */
     display: flex !important; /* 强制 flex 布局 */
     flex-direction: column; /* 垂直布局 */
     justify-content: center; /* 垂直居中 */
     align-items: center; /* 水平居中 */
-    padding: var(--spacing-xl) var(--spacing-md); /* 四周留白 */
+    padding: var(--spacing-lg) var(--spacing-md); /* 四周留白 */
     width: 100%;
     max-width: 100%; /* 确保不会超出父容器 */
     margin: 0 auto; /* 容器本身也居中 */
@@ -549,7 +549,7 @@
 
   /* 轮播容器紧凑间距 + 留出缩放空间 */
   .tools-showcase__carousel-wrapper {
-    padding: var(--spacing-lg) 0;
+    padding: var(--spacing-md) 0;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -557,8 +557,8 @@
   }
 
   .tools-showcase__carousel {
-    min-height: 450px; /* 增加高度,留出缩放空间 */
-    padding: var(--spacing-lg) var(--spacing-sm);
+    min-height: 400px; /* 增加高度,留出缩放空间 */
+    padding: var(--spacing-md) var(--spacing-sm);
     display: flex !important;
     flex-direction: column;
     justify-content: center;
